--- a/OledI2C_Converter.html
+++ b/OledI2C_Converter.html
@@ -357,8 +357,9 @@ Copyright (c) 2016 by Fabrice Weinberg
             step="1">
         </div>
       </div>
+      <div style="display: flex;gap: 8px; align-items: center;padding: 8px;">
       <label for="boldness">Boldness:</label>
-      <div style="display: flex;gap: 8px;">
+      
         <input type="range" id="boldness" min="1" max="254" value="128" style="width:200px;" step="1">
         <span id="boldnessValue">128</span>
         <div><button id="resetBoldness" type="button">Reset</button></div>
